fix: visibility of menu icon with menu open
set z-index really high so it displays over the menu

--- a/src/styles.css
+++ b/src/styles.css
@@ -122,6 +122,10 @@ header > div {
       width: 40px;
     }
   }
+
+  #hamburger {
+    z-index: 100;
+  }
 }
 
 @media screen and (min-width: 950px) {
